--- a/.github/workflows/workshop_unit_test.yml
+++ b/.github/workflows/workshop_unit_test.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install AZ ML and tools
         run: | # SETUP line 34 to point to your own AML workspace
           az extension add -n ml -y --version 2.2.1
-          az configure --defaults group=azureml workspace=ws01ent location=westus2   
+          az configure --defaults group=ezmlopsrg17 workspace=78f454b3-75fb-45d0-a3a5-b3f06fa8987c location=Australia East   
       - name: Run Feature Engineering
         uses: ./.github/actions/aml-job-create
         with:
